k8s-manifests/non-serverless/03_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apikube-depl
  namespace: techdemo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apikube
  template:
    metadata:
      labels:
        app: apikube
    spec:
      containers:
      - name: backend-container
        image: ghcr.io/xamma/apikube:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      restartPolicy: Always
