k8s-manifests/non-serverless/05_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apikube-ingress
  namespace: techdemo
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-prod
    external-dns.alpha.kubernetes.io/target: xammaops.win
    external-dns.alpha.kubernetes.io/hostname: apikube.xammaops.win
    nginx.ingress.kubernetes.io/auth-url: |-
        http://ak-outpost-test.common.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
        https://id.xammaops.win/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
        Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
        proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apikube-srv
            port:
              number: 8000
    host: apikube.xammaops.win
  tls:
  - hosts:
    - apikube.xammaops.win
    secretName: apikube-tls
